仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年11月12日 2:10:23</h3>
+    <h3>更新时间：2023年11月12日 22:30:40</h3>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -21,10 +21,14 @@
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>（日更，不稳定）wine-daily-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-daily-ubuntu22.04-aarch64.7z'>（日更，不稳定）wine-daily-ubuntu22.04-aarch64</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-6/-/raw/main/wine-staging-wow64-8.20-debian10-amd64.7z'>wine-staging-wow64-8.20-debian10-amd64</a></p>
+    <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-6/-/raw/main/wine-staging-8.20-debian10-amd64.7z'>wine-staging-8.20-debian10-x86_64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.20-debian10-amd64.7z'>wine-staging-8.20-debian10-amd64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.20-debian10-i386.7z'>wine-staging-8.20-debian10-i386</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-5/-/raw/main/wine-staging-wow64-8.19-debian10-amd64.7z'>wine-staging-wow64-8.19-debian10-amd64</a></p>
     <p><a href='https://jihulab.com/gfdgd-xi/wine-mirrors-5/-/raw/main/wine-staging-8.19-debian10-x86_64.7z'>wine-staging-8.19-debian10-x86_64</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-staging-8.19-debian10-amd64.7z'>wine-staging-8.19-debian10-amd64</a></p>
-    <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-staging-8.19-debian10-i386.7z'>wine-staging-8.19-debian10-i386</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.19-debian10-amd64.7z'>wine-staging-8.19-debian10-amd64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.19-debian10-i386.7z'>wine-staging-8.19-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8.22-x86_64.7z'>wine-lutris-GE-Proton8.22-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-lutris-GE-Proton8.21-x86_64.7z'>wine-lutris-GE-Proton8.21-x86_64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/GE-Proton-8.22.7z'>GE-Proton-8.22</a></p>
