仓库自动刷新

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年11月25日 22:35:42</h3>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————下面版本若标有debian10字样则代表是作者从上游拉取编译的——————</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>——————若没有则代表是从官方源拉取的——————</a></p>
+    <h3>更新时间：2023年11月26日 12:10:33</h3>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ 对于非 X86 且安装了二进制兼容层（如 Box86/64、exagear、qemu、lat），应当下载 x86 架构的 wine</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ Arm wine 只能运行 arm exe（wine ce 属于例外）</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-wow64-daily-debian10-amd64.7z'>（日更，不稳定）wine-wow64-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
@@ -181,18 +181,18 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-ce-8.2-armhf/wine-ce-8.2-armhf.7z'>wine-ce-8.2-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1/wine-staging-8.1.7z'>wine-staging-8.1</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-x86_64/wine-staging-8.1-debian10-x86_64.7z'>wine-staging-8.1-debian10-x86_64</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-amd64/wine-staging-8.1-debian10-amd64.7z'>wine-staging-8.1-debian10-amd64（只有64位的，无32位）</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-amd64/wine-staging-8.1-debian10-amd64.7z'>wine-staging-8.1-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-debian10-i386/wine-staging-8.1-debian10-i386.7z'>wine-staging-8.1-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-ce-8.1-armhf/wine-ce-8.1-armhf.7z'>wine-ce-8.1-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.1-ubuntu20.04-aarch64/wine-staging-8.1-ubuntu20.04-aarch64.7z'>wine-staging-8.1-ubuntu20.04-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-x86_64/wine-stable-8.0-debian10-x86_64.7z'>wine-stable-8.0-debian10-x86_64</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-amd64/wine-stable-8.0-debian10-amd64.7z'>wine-stable-8.0-debian10-amd64（只有64位的，无32位）</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-amd64/wine-stable-8.0-debian10-amd64.7z'>wine-stable-8.0-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-stable-8.0-debian10-i386/wine-stable-8.0-debian10-i386.7z'>wine-stable-8.0-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-ce-8.0-armhf/wine-ce-8.0-armhf.7z'>wine-ce-8.0-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5/wine-staging-8.0-rc5.7z'>wine-staging-8.0-rc5</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-devel-8.0-rc5/wine-devel-8.0-rc5.7z'>wine-devel-8.0-rc5</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-x86_64/wine-staging-8.0-rc5-debian10-x86_64.7z'>wine-staging-8.0-rc5-debian10-x86_64</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-amd64/wine-staging-8.0-rc5-debian10-amd64.7z'>wine-staging-8.0-rc5-debian10-amd64（只有64位的，无32位）</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-amd64/wine-staging-8.0-rc5-debian10-amd64.7z'>wine-staging-8.0-rc5-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-i386/wine-staging-8.0-rc5-debian10-i386.7z'>wine-staging-8.0-rc5-debian10-i386（只有32位的，无64位）</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-ubuntu20.04-aarch64/wine-staging-8.0-rc5-ubuntu20.04-aarch64.7z'>wine-staging-8.0-rc5-ubuntu20.04-aarch64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc5-debian10-armv71/wine-staging-8.0-rc5-debian10-armv71.7z'>wine-staging-8.0-rc5-debian10-armv71</a></p>
@@ -201,7 +201,7 @@
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-devel-8.0-rc4/wine-devel-8.0-rc4.7z'>wine-devel-8.0-rc4</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc4-debian10-x86_64/wine-staging-8.0-rc4-debian10-x86_64.7z'>wine-staging-8.0-rc4-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc4-debian10-i386/wine-staging-8.0-rc4-debian10-i386.7z'>wine-staging-8.0-rc4-debian10-i386（只有32位的，无64位）</a></p>
-    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc4-debian10-amd64/wine-staging-8.0-rc4-debian10-amd64.7z'>wine-staging-8.0-rc4-debian10-amd64（只有64位的，无32位）</a></p>
+    <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc4-debian10-amd64/wine-staging-8.0-rc4-debian10-amd64.7z'>wine-staging-8.0-rc4-debian10-amd64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-ce-8.0-rc4-armhf/wine-ce-8.0-rc4-armhf.7z'>wine-ce-8.0-rc4-armhf</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/wine-staging-8.0-rc3/wine-staging-8.0-rc3.7z'>wine-staging-8.0-rc3-debian10-x86_64</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/lutris-fshack-7.2/lutris-fshack-7.2.7z'>lutris-fshack-7.2</a></p>
