--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年12月13日 22:30:42</h3>
+    <h3>更新时间：2023年12月14日 2:17:23</h3>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ 对于非 X86 且安装了二进制兼容层（如 Box86/64、exagear、qemu、lat），应当下载 x86 架构的 wine</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ Arm wine 只能运行 arm exe（wine ce 属于例外）</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -21,6 +21,7 @@
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>（日更，不稳定）wine-daily-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-daily-ubuntu22.04-aarch64.7z'>（日更，不稳定）wine-daily-ubuntu22.04-aarch64</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-9.0-rc1-riscv64.7z'>wine-ce-9.0-rc1-riscv64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-9.0-rc1-arm64.7z'>wine-ce-9.0-rc1-arm64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-wow64-9.0-rc1-debian10-amd64.7z'>wine-staging-wow64-9.0-rc1-debian10-amd64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-9.0-rc1-debian10-x86_64.7z'>wine-staging-9.0-rc1-debian10-x86_64</a></p>
