--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2023年12月30日 12:17:26</h3>
+    <h3>更新时间：2023年12月30日 22:30:36</h3>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ 对于非 X86 且安装了二进制兼容层（如 Box86/64、exagear、qemu、lat），应当下载 x86 架构的 wine</a></p>
     <p><a href='https://github.com/rain-gfd/wine-download/releases/download/egg/egg.7z'>+ Arm wine 只能运行 arm exe（wine ce 属于例外）</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>（日更，不稳定）wine-daily-debian10-x86_64</a></p>
@@ -21,6 +21,18 @@
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>（日更，不稳定）wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>（日更，不稳定）wine-daily-debian10-i386</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/wine-building/wine-daily-ubuntu22.04-aarch64.7z'>（日更，不稳定）wine-daily-ubuntu22.04-aarch64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-stable_8.0.2-x86_64-appimage-sourceforge.7z/download'>wine-stable_8.0.2-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging_ge-proton_8-25-x86_64-appimage-sourceforge.7z/download'>wine-staging_ge-proton_8-25-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging_9.0-x86_64-appimage-sourceforge.7z/download'>wine-staging_9.0-x86_64-appimage-sourceforge</a></p>
+    <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/ukylin-wine-70.6.3.25-amd64.7z'>ukylin-wine-70.6.3.25-amd64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging_8.21-x86_64-appimage-sourceforge.7z/download'>wine-staging_8.21-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64_8.21-x86_64-appimage-sourceforge.7z/download'>wine-staging-wow64_8.21-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-devel-wow64_8.21-x86_64-appimage-sourceforge.7z/download'>wine-devel-wow64_8.21-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-devel_9.0-x86_64-appimage-sourceforge.7z/download'>wine-devel_9.0-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging_ge-lol_7-1-x86_64-appimage-sourceforge.7z/download'>wine-staging_ge-lol_7-1-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-stable-multi_4.0.4-x86_64-appimage-sourceforge.7z/download'>wine-stable-multi_4.0.4-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-stable-i386_4.0.4-x86_64-appimage-sourceforge.7z/download'>wine-stable-i386_4.0.4-x86_64-appimage-sourceforge</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-stable-amd64_4.0.4-x86_64-appimage-sourceforge.7z/download'>wine-stable-amd64_4.0.4-x86_64-appimage-sourceforge</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-ce-9.0-rc1-ubuntu22.04-arm64.7z'>wine-ce-9.0-rc1-ubuntu22.04-arm64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-9.0-rc3-ubuntu22.04-aarch64.7z'>wine-staging-9.0-rc3-ubuntu22.04-aarch64</a></p>
     <p><a href='http://seafile.jyx2048.com:2345/spark-deepin-wine-runner/data/wine/wine-staging-8.21-ubuntu22.04-aarch64.7z'>wine-staging-8.21-ubuntu22.04-aarch64</a></p>
