--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2024年6月15日 12:10:28</h3>
+    <h3>更新时间：2024年6月15日 22:30:29</h3>
     <p><a href='https://master.dl.sourceforge.net/project/deep-wine-runner-wine-download/egg/egg.7z'>+ You should download x86 wine if you have installed x86 emulator such as box86/box64, exagear, lat, qemu and so on</a></p>
     <p><a href='https://master.dl.sourceforge.net/project/deep-wine-runner-wine-download/egg/egg.7z'>+ Arm wine only run arm exe but arm/riscv64 wine-ce can run i386 exe</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>(Daily, Unstable) wine-daily-debian10-x86_64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-wow64-daily-debian10-amd64.7z'>(Daily, Unstable) wine-wow64-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>(Daily, Unstable) wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>(Daily, Unstable) wine-daily-debian10-i386</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64-9.11-debian10-amd64.7z'>wine-staging-wow64-9.11-debian10-amd64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-9.11-debian10-x86_64.7z'>wine-staging-9.11-debian10-x86_64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-9.11-debian10-amd64.7z'>wine-staging-9.11-debian10-amd64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-9.11-debian10-i386.7z'>wine-staging-9.11-debian10-i386</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64-9.1-debian10-amd64.7z/download'>wine-staging-wow64-9.1-debian10-amd64</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/GE-Proton9.7.7z'>GE-Proton9.7</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/GE-Proton9.6.7z'>GE-Proton9.6</a></p>
