--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>推荐在 Wine 运行器内安装</h3>
     <p style='overflow: auto;'><img src='images/截图_installwine_20230123094608.png'></p>
     <hr/>
-    <h3>更新时间：2024年7月15日 12:10:34</h3>
+    <h3>更新时间：2024年7月15日 22:34:9</h3>
     <p><a href='https://master.dl.sourceforge.net/project/deep-wine-runner-wine-download/egg/egg.7z'>+ You should download x86 wine if you have installed x86 emulator such as box86/box64, exagear, lat, qemu and so on</a></p>
     <p><a href='https://master.dl.sourceforge.net/project/deep-wine-runner-wine-download/egg/egg.7z'>+ Arm wine only run arm exe but arm/riscv64 wine-ce can run i386 exe</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-wow64-box64-daily-debian10-arm64.7z'>(Daily, Unstable) wine-wow64-box64-daily-debian10-arm64</a></p>
@@ -21,6 +21,11 @@
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-x86_64.7z'>(Daily, Unstable) wine-daily-debian10-x86_64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-amd64.7z'>(Daily, Unstable) wine-daily-debian10-amd64</a></p>
     <p><a href='http://120.25.153.144:2345/wine-building/wine-daily-debian10-i386.7z'>(Daily, Unstable) wine-daily-debian10-i386</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/deepin-wine8-stable-box64-8.16-deepin13-arm64.7z'>deepin-wine8-stable-box64-8.16-deepin13-arm64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/deepin-wine8-stable-8.16-deepin21-amd64.7z'>deepin-wine8-stable-8.16-deepin21-amd64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/deepin-wine8-stable-box64-8.16-deepin13-riscv64.7z'>deepin-wine8-stable-box64-8.16-deepin13-riscv64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/spark-wine9-wow-box64-9.11-arm64.7z'>spark-wine9-wow-box64-9.11-arm64</a></p>
+    <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/spark-wine9-wow-box64-9.11-riscv64.7z'>spark-wine9-wow-box64-9.11-riscv64</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64-box64-9.13-debian10-riscv64.7z'>wine-staging-wow64-box64-9.13-debian10-riscv64</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64-box64-9.13-debian10-arm64.7z'>wine-staging-wow64-box64-9.13-debian10-arm64</a></p>
     <p><a href='https://sourceforge.net/projects/deep-wine-runner-wine-download/files/wine-staging-wow64-9.13-debian10-amd64.7z'>wine-staging-wow64-9.13-debian10-amd64</a></p>
